define bartStyle for android

--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "privacy": "public",
     "sdkVersion": "35.0.0",
     "platforms": ["ios", "android", "web"],
-    "version": "1.0.0",
+    "version": "1.0.1",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
@@ -23,6 +23,9 @@
     },
     "android": {
       "package": "com.vitorleonel.githubapp"
+    },
+    "androidStatusBar": {
+      "barStyle": "dark-content"
     }
   }
 }
